--- a/app/src/main/res/layout/activity_business_additional_action_required.xml
+++ b/app/src/main/res/layout/activity_business_additional_action_required.xml
@@ -59,7 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_15sdp"
                     android:fontFamily="@font/opensans_regular"
-                    android:text="Thank you for your interest in coyni. After reviewing your account. The coyni team requires you to upload the following documentation within 30 days to continue account verification."
+                    android:text="@string/act_rqrd_description"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp" />
             </LinearLayout>
