--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -1271,6 +1271,7 @@
                                 android:orientation="horizontal">
 
                                 <TextView
+                                    android:id="@+id/reserveRuleTV"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="@dimen/_10sdp"
