--- a/app/src/main/res/layout/activity_add_new_team_member.xml
+++ b/app/src/main/res/layout/activity_add_new_team_member.xml
@@ -94,7 +94,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_1sdp"
-                            android:fontFamily="@font/opensans_semibold"
+                            android:fontFamily="@font/opensans_regular"
                             android:text="@string/full_administrator_permission"
                             android:textColor="@color/dark_grey"
                             android:textSize="@dimen/_11ssp" />
