--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -1282,6 +1282,7 @@
                                     android:textSize="@dimen/_10ssp" />
 
                                 <TextView
+                                    android:id="@+id/rulePeriodTV"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="@dimen/_5sdp"
