--- a/app/src/main/res/layout/activity_business_user_details_preview.xml
+++ b/app/src/main/res/layout/activity_business_user_details_preview.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#f2f4f5"
     android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
     tools:context=".view.BusinessUserDetailsPreviewActivity">
 
