--- a/app/src/main/res/layout/activity_addcard.xml
+++ b/app/src/main/res/layout/activity_addcard.xml
@@ -12,6 +12,7 @@
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <LinearLayout
+        android:id="@+id/topLL"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
