--- a/app/src/main/res/layout/activity_additional_benifitial_owners.xml
+++ b/app/src/main/res/layout/activity_additional_benifitial_owners.xml
@@ -35,6 +35,7 @@
             android:textSize="@dimen/_16ssp" />
 
         <TextView
+            android:id="@+id/boDescTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_21sdp"
@@ -47,7 +48,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -74,7 +76,8 @@
             android:fontFamily="@font/opensans_bold"
             android:text="@string/greater"
             android:textColor="@color/primary_green"
-            android:textSize="@dimen/_11ssp" />
+            android:textSize="@dimen/_11ssp"
+            android:visibility="gone"/>
     </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
