--- a/app/src/main/res/layout/activity_additional_action_upload.xml
+++ b/app/src/main/res/layout/activity_additional_action_upload.xml
@@ -54,6 +54,7 @@
                 android:textSize="@dimen/_16ssp" />
 
             <TextView
+                android:id="@+id/adminMessageTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
