--- a/app/src/main/res/layout/activity_business_additional_action_required.xml
+++ b/app/src/main/res/layout/activity_business_additional_action_required.xml
@@ -55,11 +55,11 @@
                     android:textSize="@dimen/_16ssp" />
 
                 <TextView
+                    android:id="@+id/adminMessageTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_15sdp"
                     android:fontFamily="@font/opensans_regular"
-                    android:text="@string/act_rqrd_description"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp" />
             </LinearLayout>
