--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -811,7 +811,7 @@
                                     android:text="You have no recent transactions"
                                     android:textColor="@color/light_gray"
                                     android:textSize="@dimen/_10ssp"
-                                    android:visibility="gone" />
+                                    android:visibility="visible" />
 
                             </LinearLayout>
 
