--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -513,10 +513,11 @@
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
+                                        android:layout_marginTop="@dimen/_6sdp"
                                         android:fontFamily="@font/opensans_semibold"
                                         android:text="Account Status:"
                                         android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_12ssp" />
+                                        android:textSize="@dimen/_11ssp" />
 
                                     <LinearLayout
                                         android:layout_width="match_parent"
@@ -528,15 +529,15 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_marginStart="5dp"
+                                            android:layout_marginTop="@dimen/_6sdp"
                                             android:fontFamily="@font/opensans_semibold"
-                                            android:text=" Under Review"
+                                            android:text="Under Review"
                                             android:textColor="@color/under_review_blue"
                                             android:textSize="@dimen/_11ssp" />
 
                                         <androidx.cardview.widget.CardView
                                             android:layout_width="@dimen/_8sdp"
                                             android:layout_height="@dimen/_8sdp"
-                                            android:layout_marginStart="@dimen/_5sdp"
                                             android:layout_marginTop="@dimen/_2sdp"
                                             app:cardBackgroundColor="@color/under_review_blue"
                                             app:cardCornerRadius="@dimen/_4sdp" />
