--- a/app/src/main/res/layout/show_image_actionrequired.xml
+++ b/app/src/main/res/layout/show_image_actionrequired.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:adjustViewBounds="true"
         android:src="@drawable/ic_case" />
 
 </RelativeLayout>
