--- a/app/src/main/res/layout/business_comapany_listitem.xml
+++ b/app/src/main/res/layout/business_comapany_listitem.xml
@@ -19,6 +19,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="@dimen/_33sdp"
+            android:layout_margin="@dimen/_2sdp"
             android:layout_height="@dimen/_33sdp"
             app:cardCornerRadius="@dimen/_16sdp">
 
