--- a/app/src/main/res/layout/business_profile_accounts_item_child.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item_child.xml
@@ -77,7 +77,7 @@
             android:gravity="center|right"
             android:layout_marginEnd="@dimen/_16sdp"
             android:src="@drawable/ic_custom_tick"
-            android:visibility="visible"
+            android:visibility="gone"
             app:tint="@color/primary_green" />
     </LinearLayout>
 
