--- a/app/src/main/res/layout/notification_pay_preview.xml
+++ b/app/src/main/res/layout/notification_pay_preview.xml
@@ -59,7 +59,7 @@
                 android:paddingTop="@dimen/_9sdp"
                 android:paddingBottom="@dimen/_7sdp"
                 android:text="CYN"
-                android:textColor="@color/light_gray"
+                android:textColor="@color/primary_color"
                 android:textSize="@dimen/_12ssp" />
         </LinearLayout>
 
