Merchant Bug Fix

--- a/app/src/main/res/layout/business_profile_accounts_item.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item.xml
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:visibility="visible"
             android:padding="@dimen/_2sdp"
-            android:layout_marginTop="@dimen/_10ssp"
+            android:layout_gravity="center"
             android:layout_marginEnd="@dimen/_25sdp"
             android:contentDescription="@string/businessProfileAccountExpandDownArrow"
             android:src="@drawable/ic_down" />
