--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -77,6 +77,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="@dimen/_9sdp"
                     android:layout_weight="1"
+                    android:text="asdfghjkl"
                     android:fontFamily="@font/opensans_semibold"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_11ssp" />
@@ -85,13 +86,14 @@
                     android:id="@+id/notificationsRL"
                     android:layout_width="@dimen/_30sdp"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_gravity="center">
+                    android:layout_gravity="center_vertical">
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/countCV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
+                        android:layout_marginTop="@dimen/_3sdp"
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:visibility="gone"
                         app:cardBackgroundColor="@color/primary_green"
@@ -114,7 +116,8 @@
                         android:id="@+id/iv_notifications"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_centerInParent="true"
+                        android:layout_gravity="center_horizontal"
                         android:layout_weight="1"
                         android:scaleType="fitEnd"
                         android:src="@drawable/ic_notifications" />
@@ -1248,20 +1251,30 @@
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_10ssp" />
                             </LinearLayout>
+                            <TextView
+                                android:id="@+id/reserveRuleTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:layout_marginEnd="@dimen/_11sdp"
+                                android:fontFamily="@font/opensans_regular"
+                                android:text="@string/reserverole"
+                                android:textColor="@color/dark_grey"
+                                android:textSize="@dimen/_10ssp" />
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_10sdp"
                                 android:layout_marginTop="@dimen/_11sdp"
-                                android:orientation="horizontal">
+                                android:orientation="horizontal"
+                                android:visibility="gone">
 
                                 <TextView
-                                    android:id="@+id/reserveRuleTV"
+                                    android:id="@+id/reserveRuleaTV"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginStart="@dimen/_10sdp"
                                     android:fontFamily="@font/opensans_regular"
-                                    android:lineHeight="@dimen/_10sdp"
                                     android:text="@string/reserverole"
                                     android:textColor="@color/dark_grey"
                                     android:textSize="@dimen/_10ssp" />
@@ -1270,12 +1283,11 @@
                                     android:id="@+id/rulePeriodTV"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginStart="@dimen/_5sdp"
                                     android:fontFamily="@font/opensans_bold"
-                                    android:lineHeight="@dimen/_10sdp"
-                                    android:text="@string/reserverule"
+                                    android:text="  [%] per Sale Order with a 90 day rolling period. adfg vbnmkj kjhgf"
                                     android:textColor="@color/dark_grey"
-                                    android:textSize="@dimen/_10ssp" />
+                                    android:textSize="@dimen/_10ssp"
+                                    android:visibility="gone"/>
                             </LinearLayout>
 
                             <TextView
@@ -1286,7 +1298,8 @@
                                 android:lineHeight="@dimen/_10sdp"
                                 android:text="@string/rollingperiod"
                                 android:textColor="@color/dark_grey"
-                                android:textSize="@dimen/_10ssp" />
+                                android:textSize="@dimen/_10ssp"
+                                android:visibility="gone"/>
 
                             <LinearLayout
                                 android:layout_width="match_parent"
