--- a/app/src/main/res/layout/rolling_list.xml
+++ b/app/src/main/res/layout/rolling_list.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         android:fontFamily="@font/opensans_bold"
-        android:text="20,000.00"
+        android:text=""
         android:textColor="@color/xdark_gray"
         android:textSize="@dimen/_12ssp" />
 
@@ -53,7 +53,7 @@
         android:layout_marginTop="@dimen/_7sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         android:fontFamily="@font/opensans_semibold"
-        android:text="Release: 06/23/2021 @ 2:20am"
+        android:text=""
         android:textColor="@color/xdark_gray"
         android:textSize="@dimen/_9ssp" />
 
