--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -77,8 +77,8 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="@dimen/_9sdp"
                     android:layout_weight="1"
-                    android:text="asdfghjkl"
                     android:fontFamily="@font/opensans_semibold"
+                    android:text=""
                     android:textColor="@color/black"
                     android:textSize="@dimen/_11ssp" />
 
@@ -1251,6 +1251,7 @@
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_10ssp" />
                             </LinearLayout>
+
                             <TextView
                                 android:id="@+id/reserveRuleTV"
                                 android:layout_width="wrap_content"
@@ -1287,7 +1288,7 @@
                                     android:text="  [%] per Sale Order with a 90 day rolling period. adfg vbnmkj kjhgf"
                                     android:textColor="@color/dark_grey"
                                     android:textSize="@dimen/_10ssp"
-                                    android:visibility="gone"/>
+                                    android:visibility="gone" />
                             </LinearLayout>
 
                             <TextView
@@ -1299,7 +1300,7 @@
                                 android:text="@string/rollingperiod"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_10ssp"
-                                android:visibility="gone"/>
+                                android:visibility="gone" />
 
                             <LinearLayout
                                 android:layout_width="match_parent"
